@@ -2,7 +2,7 @@
  A tool for fast logging of numerical data graphical display
  of this data.
 
- Copyright (c) 1998, 1999 Tobias Oetiker
+ Copyright (c) 1998-2005 Tobias Oetiker
  All rights reserved.
 
  This program is free software; you can redistribute it and/or modify it
